# openconv-python

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
docs/: index.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/opencf/: modules.rst  opencf.converters.rst  opencf.io_handlers.rst  opencf.rst
docs/source/openconv/: modules.rst  openconv.converters.rst  openconv.io_handlers.rst  openconv.rst
examples/: img-to-pdf.md  pdf-to-docx.md  pdf-to-img.md
examples/input/: SOURCES  example.xlsx  example.xlsx.csv  example.xml  test1.json  test1.md
opencf/: app.py
opencf/converters/: __init__.py  document.py  markup.py  structured.py  video.py
opencf/io_handlers/: video.py
openconv/: app.py
openconv/converters/: __init__.py  document.py  markup.py  structured.py  video.py
openconv/io_handlers/: img_opencv.py  img_pillow.py  pdf.py  spreadsheet.py  video.py
scripts/: optional_import.py  run-build-docu.sh  run-format.sh  run-pydeps.sh
tests/: __init__.py
